--- a/src/index.html
+++ b/src/index.html
@@ -68,5 +68,44 @@
             <img src="img/bg/woman_bg.png" alt="woman" class="optimization_img">
         </div>
     </section>
+
+    <section class="finish">
+        <div class="container">
+            <h2 class="finish_header">Что вас ждет в нашем интенсиве?</h2>
+            <div class="finish_divider"></div>
+            <div class="finish_wrapper">
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/finish_icon_1.png" alt="finish_icon_1" class="finish_img">
+                    </div>
+                    <div class="finish_text">Создать свой сайт или блог</div>
+                </div>
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/finish_icon_2.png" alt="finish_icon_2" class="finish_img">
+                    </div>
+                    <div class="finish_text">Правильно его оптимизировать</div>
+                </div>
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/finish_icon_3.png" alt="finish_icon_3" class="finish_img">
+                    </div>
+                    <div class="finish_text">Обеспечить ему медлен- ный, но верный рост в ТОП</div>
+                </div>
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/finish_icon_4.png" alt="finish_icon_4" class="finish_img">
+                    </div>
+                    <div class="finish_text">Достигнуть стабильного прироста посетителей</div>
+                </div>
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/finish_icon_5.png" alt="finish_icon_5" class="finish_img">
+                    </div>
+                    <div class="finish_text">Получать ощутимую прибыль</div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
