--- a/src/index.html
+++ b/src/index.html
@@ -115,5 +115,16 @@
             <button class="gift_btn">Записаться на интенсив!</button>
         </div>
     </section>
+
+    <section class="webinar">
+        <div class="container">
+            <img src="img/first.png" alt="webinar" class="webinar_img">
+            <h2 class="webinar_header">Первый вебинар состоится:</h2>
+            <h3 class="webinar_subheader">10 сентября в 20:00 по Москве</h3>
+            <div class="webinar_text">Успейте записаться, количество мест ограничено!</div>
+        </div>
+    </section>
+
+    
 </body>
 </html>
