--- a/src/index.html
+++ b/src/index.html
@@ -125,6 +125,13 @@
         </div>
     </section>
 
-    
+    <footer>
+        <div class="container">
+            <nav>
+                <div class="footer_wrapper"><a href="#">Служба поддержки</a> | <a href="#">Политика конфиденциальности</a></div>
+                <div class="number">Позвоните нам <a href="#">8-800-555-01-21</a></div>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
